--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                         I've been on the internet since I was 7. 
                         A lot of my online friends back then were much older and had cool websites. 
                         Unfortunately, I wasn't able to make my own. Plus, I lost contact with a lot of them. 
+                        Their glittery, flashing websites sit at the back of my mind all the time!! 
+                        So now, years later, I've impulsively decided I wanted to make my own. 
+                        Those older kids probably don't even remember me anymore--they might be 35 now, actually. 
+                        Anyways, I saw somewhere on Twitter (sorry, I am still not calling it X) that each person is a mosaic of all the people they loved. 
+                        I hope that this website can be a repersentation of that mosaic for me. 
                     </p>
                     
 
