--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
                         Anyways, I saw somewhere on Twitter (sorry, I am still not calling it X) that each person is a mosaic of all the people they loved. 
                         I hope that this website can be a repersentation of that mosaic for me. 
                     </p>
+
+                    <p>This page is still under construction, tho. :)) More to come in the future. </p>
                     
 
                 </main>
