--- a/content/_layout.html
+++ b/content/_layout.html
@@ -72,26 +72,7 @@
             </aside>
         
         <main>
-            <p><center></p>
-<h1>
-    <img src="https://web.archive.org/web/20091022114850im_/http://geocities.com/perfect_land/flower.gif"> &emsp;
-    Laura's World &emsp;
-    <img src="https://web.archive.org/web/20091022114850im_/http://geocities.com/perfect_land/flower.gif">
-</h1>
-<p></center></p>
-<p><strong>Welcome to my page!!</strong></p>
-<p>I decided to make this webpage to serve as somewhat of a personal collage. 
-I hope that, over time, I can populate this page with all the things I like, my random thoughts, and anything else that might not be appropriate to put on a professional website.
-Web development is not my strong suite, so maybe this will take a while. But anyways, thanks for visiting my site! Feel free to look around. My interests are the best interests.</p>
-<p>I've been on the internet since I was 7. 
-A lot of my online friends back then were much older and had cool websites. 
-Unfortunately, I wasn't able to make my own. Plus, I lost contact with a lot of them. 
-Their glittery, flashing websites sit at the back of my mind all the time!! 
-So now, years later, I've impulsively decided I wanted to make my own. 
-Those older kids probably don't even remember me anymore--they might be 35 now, actually. 
-Anyways, I saw somewhere on Twitter (sorry, I am still not calling it X) that each person is a mosaic of all the people they loved. 
-I hope that this website can be a repersentation of that mosaic for me. </p>
-<p>This page is still under construction, tho. :)) More to come in the future.</p>
+            MAIN_INFO_HERE
         </main>
         
         <aside id="rightSidebar" style="margin-left: 10px;">
