added back to top

--- a/blog.html
+++ b/blog.html
@@ -80,6 +80,7 @@
 </h1>
 <p></center></p>
 <p><img alt="under construction gif" src="imgs/under_construction.gif" title="Under Construction" /></p>
+            <a href="#">Back to the top!!</a>
         </main>
         
         <aside id="rightSidebar" style="margin-left: 10px;">
