--- a/content/_layout.html
+++ b/content/_layout.html
@@ -73,6 +73,7 @@
         
         <main>
             MAIN_INFO_HERE
+            <a href="#">Back to the top!!</a>
         </main>
         
         <aside id="rightSidebar" style="margin-left: 10px;">
