--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,7 @@
 <p><strong>For my various creations</strong></p>
 <p>This is my Gallery, where I put various creations of mine. Not sure if it's art exactly, but it's nice to have everything in one place.</p>
 <p><img alt="under construction gif" src="imgs/under_construction.gif" title="Under Construction" /></p>
+            <a href="#">Back to the top!!</a>
         </main>
         
         <aside id="rightSidebar" style="margin-left: 10px;">
