--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ Those older kids probably don't even remember me anymore--they might be 35 now, 
 Anyways, I saw somewhere on Twitter (sorry, I am still not calling it X) that each person is a mosaic of all the people they loved. 
 I hope that this website can be a repersentation of that mosaic for me. </p>
 <p>This page is still under construction, tho. :)) More to come in the future.</p>
+            <a href="#">Back to the top!!</a>
         </main>
         
         <aside id="rightSidebar" style="margin-left: 10px;">
