--- a/gallery.html
+++ b/gallery.html
@@ -105,12 +105,13 @@
                 <li><a target="_blank" href="https://icons8.com/icon/QyZp4Pat02yK/pixel-star">Pixel Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
                 <li><a target="_blank" href="https://cinni.net/images/adopt/walkingnara.gif">Walking Nara Cat</a> flavicon by <a target="_blank" href="https://cinni.net/?z=/adopt">Cinni's Dream Home</a></li>
                 <li><a target="_blank" href="http://textfiles.com/underconstruction/">Under Construction GIFs</a></a></li>
+                <li><a target="_blank" href="https://goblin-heart.net/">Website Template Resources</a></a></li>
             </ul>
             
         </aside></div>
         
     <footer id="footer" style="margin-top: 10px;">
-        This webpage was made possible thanks to <a href="https://goblin-heart.net/">sadgrl</a>'s resources, thank you!!
+        Last updated on 2024年06月21日
     </footer></div>
     </body>
 </html>
