--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
     <div id="container"><div id="topBar">
         <marquee>
-            "Life is not long enough to do all the research I want to do!" - Ray Stricklin, 1946-2018 
+            "Life is not long enough to do all the research I want to do!" - Ray Stricklin <!-- , 1946-2018  -->
             &emsp; &emsp; &emsp;
-            "Oh, France is amazing, you must visit!" - Deborah Baran Walk, 1948-2016
+            "Oh, France is amazing, you must visit!" - Deborah Baran Walk <!-- , 1948-2016 -->
             &emsp; &emsp; &emsp;
-            "You're like, my favorite Asian! Good luck at your new school!" - Savoy Dunn, 1998-2011
+            "You're like, my favorite Asian! Good luck at your new school!" <!-- - Savoy Dunn, 1998-2011 -->
             &emsp; &emsp; &emsp;
-            "Don't be burdened with expectations, Laura. Live for yourself!" - Xinghai Shi, Laoye, 1940-2017
+            "Don't be burdened with expectations, Laura. Live for yourself!" <!-- - Xinghai Shi, Laoye, 1940-2017 -->
             &emsp; &emsp; &emsp;
-            "Don't cry, haha. I'll start crying too." - Aizhen Yan, Nainai, 1948-2022
+            "Don't cry, haha. I'll start crying too." - Aizhen Yan, Nainai <!-- , 1948-2022 -->
         </marquee>
     </div><div id="header" style="height: 250px;"></div>
         <div id="headerArea">
